# Azure-Multimodal-Compliance-Orchestration-Engine

./: main.py  pyproject.toml  requirements.txt
backend/scripts/: index_documents.py
backend/src/graph/: nodes.py  state.py  workflow.py
